toast overflow bug fix

--- a/src/app/styles/_custom.scss
+++ b/src/app/styles/_custom.scss
@@ -34,7 +34,7 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill  {
 //===================================
 
 //error fix
-body.md-toast-animating { overflow: auto !important; }
+body._md-toast-animating { overflow: auto !important; }
 
 md-toast .md-toast-content{
 	position:relative;
